--- a/Cadastro_Clientes/src/main/resources/static/view/clientes.html
+++ b/Cadastro_Clientes/src/main/resources/static/view/clientes.html
@@ -1,4 +1,23 @@
-<div>
-ddddddd
+<div ng-controller="clientesController">
+	
+	<a ui-sref="clientes">Clientes</a><br><br>
+	
+	<label>Login:</label>
+	<input type="text" ng-model="nUsuario.login"/><br><br>
+	<label>Nome:</label>
+	<input type="text" ng-model="nUsuario.nome"/><br><br>
+	<label>Senha:</label>
+	<input type="text" ng-model="nUsuario.senha"/><br><br>
+	
+	<input type="button" value="salvar" ng-click="salvaUsuarios()"/><br><br>
+	
 
+	{{ nome }}
+	oi {{ nUsuario.nome }}
+
+	<div ng-repeat="l in login">
+		{{l.login + ' ' + l.nome}}
+		<input type="button" id="logins" ><br><br>
+	</div>
+	
 </div>
