--- a/Cadastro_Clientes/src/main/resources/templates/index.html
+++ b/Cadastro_Clientes/src/main/resources/templates/index.html
@@ -3,12 +3,12 @@
 
 <head>
 
-
 <meta charset="UTF-8"/>
 <title>Cadastro Clientes</title>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <script src="https://unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/controller/app-controller.js"></script>
 <script src="./js/controller/login-controller.js"></script>
 <script src="./js/controller/clientes-controller.js"></script>
 
@@ -16,11 +16,10 @@
 
 <body>
 
-	<a ui-sref="clientes">login</a>
+	ddd<br><br>
 
  	<div ui-view></div>
- 
-	
+ 	
 </body>
 
 </html>
