--- a/Cadastro_Clientes/src/main/resources/templates/index.html
+++ b/Cadastro_Clientes/src/main/resources/templates/index.html
@@ -8,17 +8,34 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <script src="https://unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 <script src="./js/app.js"></script>
-<script src="./js/controller/app-controller.js"></script>
+<script src="./js/controller/cadastrocliente-controller.js"></script>
 <script src="./js/controller/login-controller.js"></script>
 <script src="./js/controller/clientes-controller.js"></script>
+<script src="./js/controller/usuario-controller.js"></script>
+<script src="./js/controller/vecliente-controller.js"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<link rel="stylesheet"  href="./css/geral.css">
 
 </head>
 
-<body>
-
-	ddd<br><br>
-
- 	<div ui-view></div>
+<body style="margin: 0 auto; background-size: 100%;">
+	
+	<div class="centro" style="min-height: 92vh;">
+		<div ui-view></div>
+	</div>
+ 	
+	<footer class="bg-light text-center text-lg-start">
+	  <!-- Copyright -->
+	  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+	    © 2020 Projeto: Cadastro de Clientes
+	  </div>
+	  <!-- Copyright -->
+	</footer> 	
+ 	
+ 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+ 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
  	
 </body>
 
