--- a/Cadastro_Clientes/src/main/resources/static/view/vecliente.html
+++ b/Cadastro_Clientes/src/main/resources/static/view/vecliente.html
@@ -23,5 +23,52 @@
 		  </div>
 		</nav>
     </header>
+    
+    <div style="margin-top: 5%; margin-left: 5%; margin-right: 5%; margin-bottom: 5%;">
+		<div class="container-fluid">
+		  <div class="row">
+		    <div class="w-75 p-3">
+		      <label class="navbar-brand">Dados Cliente</label>
+		    </div>
+		    <div class="w-25 p-3" >
+		      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		      </div>
+		    </div>
+		  </div>
+		  <div ng-repeat="cli in clientes" ng-show="cli.id==idAtual">
+			  <div class="row">
+			    <div class="w-75 p-3">
+			      <label class="form-control">{{cli.nome}}</label>
+			    </div>
+			    <div class="w-25 p-3" >
+			      <label class="form-control">{{cli.cpf}}</label>
+			    </div>
+			  </div>
+			  <div ng-repeat="end in enderecos" ng-show="end.cpf==cli.cpf">
+				<br><br>
+				<div class="row">
+				  	<div class="col">
+				  		<label class="form-control">Rua: {{end.rua}}</label>
+					</div>
+					<div class="col">
+						<label class="form-control">Numero: {{end.numero}}</label>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+				  	<div class="col">
+				  		<label class="form-control">Cidade: {{end.cidade}}</label>
+					</div>
+					<div class="col">
+						<label class="form-control">Estado: {{end.estado}}</label>
+					</div>
+					<div class="col">
+						<label class="form-control">CEP: {{end.cep}}</label>
+					</div>
+				</div>
+			  </div>
+			  
+		  </div>
+	</div>  
 	
 </div>
