--- a/Cadastro_Clientes/src/main/resources/static/view/vecliente.html
+++ b/Cadastro_Clientes/src/main/resources/static/view/vecliente.html
@@ -44,8 +44,16 @@
 			      <label class="form-control">{{cli.cpf}}</label>
 			    </div>
 			  </div>
+			  <div class="row">
+			    <div class="w-75 p-3">
+			      <label class="navbar-brand">Dados Endereco</label>
+			    </div>
+			    <div class="w-25 p-3" >
+			      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+			      </div>
+			    </div>
+			 </div>
 			  <div ng-repeat="end in enderecos" ng-show="end.cpf==cli.cpf">
-				<br><br>
 				<div class="row">
 				  	<div class="col">
 				  		<label class="form-control">Rua: {{end.rua}}</label>
@@ -66,6 +74,26 @@
 						<label class="form-control">CEP: {{end.cep}}</label>
 					</div>
 				</div>
+			  </div>
+			  <div class="row">
+			    <div class="w-75 p-3">
+			      <label class="navbar-brand">Dados Telefone</label>
+			    </div>
+			    <div class="w-25 p-3" >
+			      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+			      </div>
+			    </div>
+			  </div>
+			  <div ng-repeat="tel in telefones" ng-show="tel.cpf==cli.cpf">
+				<div class="row">
+				  	<div class="col">
+				  		<label class="form-control">DDD: {{tel.ddd}}</label>
+					</div>
+					<div class="col">
+						<label class="form-control">Telefone: {{tel.numero}}</label>
+					</div>
+				</div>
+				<br>
 			  </div>
 			  
 		  </div>
