Login Basico e Alertas

--- a/Cadastro_Clientes/src/main/resources/static/view/clientes.html
+++ b/Cadastro_Clientes/src/main/resources/static/view/clientes.html
@@ -10,7 +10,7 @@
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		      <ul class="navbar-nav">
 		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" aria-disabled="true" ui-sref="clientes">Home</a>
+		          <a class="nav-link active" aria-current="page" aria-disabled="true" ui-sref="clientes">Clientes</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" ui-sref="cadastra">Novo Cliente</a>
