--- a/Cadastro_Clientes/src/main/resources/static/view/login.html
+++ b/Cadastro_Clientes/src/main/resources/static/view/login.html
@@ -17,7 +17,8 @@
 		    <form class="row g-3" ng-submit="autenticar()">
 		      <input type="text" id="login" class="form-control" style="margin-top: 15%;" placeholder="login" ng-model="usuario.login">
 		      <input type="password" id="password" class="form-control" style="margin-top: 10%;" placeholder="senha" ng-model="usuario.senha">
-		      <input type="submit" class="btn btn-dark" style="margin-top: 15%;" value="Entrar" ui-sref="clientes">
+		      <label style="margin-top: 10%; color: red;">{{erro}}</label>
+		      <input type="submit" class="btn btn-dark" style="margin-top: 10%;" value="Entrar">
 		    </form>
 		    <div class="row g-3">
 		    	<a class="btn btn-dark" style="margin-top: 10%;" ui-sref="usuario">Criar Conta</a><br><br>
